pt/hello_world/hello_comentarios/desconto_v5.output
  File "desconto_v5.py", line 2
    desconto = 9.0  este desconto é em percentagem
                       ^
SyntaxError: invalid syntax
